8 contrast fixed

--- a/css/dr4uaccessible.css
+++ b/css/dr4uaccessible.css
@@ -28,3 +28,7 @@
     color: #000000 !important;
 }
 
+body .page-wrapper .page-footer .footer-copyright-wrapper {
+    background: #000000 !important;
+}
+
